Fix background color on Firefox

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
   background: linear-gradient(135deg, #deefeb 25%, transparent 25%) 50px 0,
               linear-gradient(225deg, #deefeb 25%, transparent 25%) 50px 0,
               linear-gradient(315deg, #deefeb 25%, transparent 25%),
-              linear-gradient(45deg, #deefeb 25%, transparent 25%);
+              linear-gradient(45deg, #deefeb 25%, transparent 25%),
+              white;
   background-size: 100px 100px;
 }
 
